# gh-container-cleaner

./: Cargo.toml  LICENSE
.fso-amem/: project.toml
src/: main.rs
